--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -4,11 +4,11 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-      <H1>States</H1>
-      <UL>
-	 {% for item in tupla %}
-         <LI>{{item.1}}: <B>{{item.0}}</B></LI>
-	 {% endfor %}
-      </UL>
+        <H1>States</H1>
+        <UL>
+        {% for state in states %}
+            <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
+        {% endfor %}
+        </UL>
     </BODY>
 </HTML>
