--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,23 +4,24 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-      {% if F == 3 %}
-      <H1>States</H1>
-      <UL>
-	{% for state in S %}
-	<LI>{{state.0}}: <B>{{state.1}}</B></LI>
-	{% endfor %}
-      </UL>
-      {% elif F == 0 %}
-      <h1>Not found!</h1>
-      {% else %}
-      <H1>State: {{S.0.1}}</H1>
-        <H3>Cities:</H3>
-        <UL>
-	  {% for city in C %}
-	  <LI>{{city.0}}: <B>{{city.1}}</B></LI>
-	  {% endfor %}
-	</UL>
-      {% endif %}
+        {% if not state_id %}
+            <H1>States</H1>
+	    <UL>
+	        {% for state in states.values()|sort(attribute='name') %}
+		    <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
+		{% endfor %}
+	    </UL>
+	{% elif state_id in states%}
+	    {% set state = states[state_id] %}
+	        <H1>State: {{ state.name }}</H1>
+		<H3>Cities</H3>
+		    <UL>
+			{% for city in state.cities|sort(attribute='name') %}
+                            <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+                        {% endfor %}
+		    </UL>
+	{% else %}
+	    <H1>Not found!</H1>
+	{% endif %}
     </BODY>
 </HTML>
